<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.haroonghawsi.assignment71.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_name"
        android:id="@+id/event_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_eventName"
        android:layout_alignBottom="@+id/event_name"
        android:layout_toRightOf="@+id/event_name"
        android:layout_toEndOf="@+id/event_name"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/event_place"
        android:id="@+id/event_place"
        android:layout_below="@+id/edit_eventName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text = "@string/placesArray"
        android:id="@+id/placesArray"
        android:layout_above="@+id/pick_date"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/edit_eventName"
        android:layout_alignStart="@+id/edit_eventName"
        android:layout_below="@+id/edit_eventName">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pick_date"
        android:id="@+id/pick_date"
        android:layout_below="@+id/event_place"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pick_time"
        android:id="@+id/pick_time"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_Submit"
        android:id="@+id/event_Submit"
        android:layout_below="@+id/pick_time"
        android:layout_alignLeft="@+id/edit_eventName"
        android:layout_alignStart="@+id/edit_eventName"
        android:layout_marginTop="32dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/formData"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/event_Submit"
        android:layout_alignStart="@+id/event_Submit"
        android:layout_marginBottom="42dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_dateView"
        android:layout_above="@+id/pick_time"
        android:layout_alignLeft="@+id/edit_timeView"
        android:layout_alignStart="@+id/edit_timeView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_timeView"
        android:layout_below="@+id/edit_dateView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/event_Submit"
        android:layout_alignStart="@+id/event_Submit" />

</RelativeLayout>
